# simple-image-converter-app

./: .gitignore  Cargo.toml  LICENSE  PROJECT_VERSION  README.md  build_release_windows.bat
scripts/: cleanup_settings_windows.bat
src/: constants.rs  convert.rs  handlers.rs  heic.rs  main.rs  message.rs  settings.rs  state.rs  theme.rs  view.rs
