[package]
name = "simple-image-converter-app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["image", "tokio", "debug"] }
rfd = "0.14"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
img-parts = "0.3"
png = "0.17"
fast_image_resize = "4.0"
lcms2 = "6.0" 
jpeg-encoder = { version = "0.6", features = ["simd"] }
mozjpeg = "0.10"
bytes = "1.5"
mimalloc = { version = "0.1", default-features = false }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
exif = { package = "kamadak-exif", version = "0.5" }
libheif-rs = "2.1"
webp = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
oxipng = "9"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
strip = true
